# zxc

./: .mcp.json  .rustfmt.toml  AUDIT.md  CLAUDE.md  Cargo.toml  README.md  ai  build.rs  rustfmt.toml
.claude/skills/bevy/: .skillfish.json  SKILL.md
.claude/skills/message-to-event/: SKILL.md
.github/workflows/: rust.yml
assets/shaders/: gi_sdf.wgsl
assets/stylesheets/: ui.ess
resources/: config.ron
src/: assets.rs  async_queue.rs  camera.rs  config.rs  configs.rs  daylight.rs  lib.rs  main.rs  movement.rs  noise.rs  prelude.rs  settings.rs  story_time.rs  tasks_queues.rs  test_utils.rs  ui.rs  utils.rs
src/ai/: mod.rs
src/carryable/: components.rs  mod.rs  systems.rs
src/commandable/: components.rs  mod.rs  systems.rs
src/commandable/complete_task_command/: mod.rs
src/commandable/drop_carried_item_command/: mod.rs
src/commandable/drop_item_command/: mod.rs
src/commandable/feed_command/: mod.rs
src/commandable/move_to_command/: mod.rs
src/commandable/pick_up_command/: mod.rs
src/commandable/pick_up_item_command/: mod.rs
src/commandable/sleep_command/: mod.rs
src/commandable/take_item_command/: mod.rs
src/commandable/task_lock_command/: mod.rs
src/commandable/to_rest_command/: mod.rs
src/commandable/user_selection_command/: mod.rs
src/commandable/work_on_command/: mod.rs
src/commands/: go_to_command.rs  mod.rs  move_to_command.rs  move_to_tile_command.rs  to_rest_command.rs  user_selection_command.rs
src/debug/: mod.rs
src/feedable/: mod.rs
src/hungerable/: mod.rs
src/input/: components.rs  mod.rs  systems.rs
src/item/: components.rs  mod.rs  systems.rs
src/map/: components.rs  mod.rs  setup_navigation.rs  spawn_map.rs  systems.rs  utils.rs
src/map/generator/: cellular_automata.rs  empty.rs  markov_junior.rs  mod.rs  perlin_noise.rs
src/map/generators/: cellular_automata.rs  mod.rs
src/movable/: components.rs  mod.rs  systems.rs
src/movement/: components.rs  mod.rs  systems.rs
src/navigation/: components.rs  mod.rs  pathfind_algo.rs  pathfinding_algo.rs  systems.rs  utils.rs
src/navigation/components/: mod.rs  navmesh.rs  navtile.rs
src/pawn/: components.rs  debug_components.rs  mod.rs  systems.rs
src/restable/: components.rs  mod.rs
src/selectable/: mod.rs
src/settings/: mod.rs
src/story_time/: components.rs  mod.rs  systems.rs  utils.rs
src/structure/: components.rs  mod.rs  systems.rs
src/structure/bed/: mod.rs
src/structure/farm/: components.rs  debug_components.rs  mod.rs  systems.rs
src/structure/farm_tile/: components.rs  mod.rs  systems.rs
src/tasks_queue/: mod.rs
src/ui/: belly_ui.rs  components.rs  debug_grid.rs  debug_info.rs  debug_movepath.rs  debug_navmesh.rs  kayak_ui.rs  kayak_ui_v2.rs  mod.rs  pawn_info.rs  pawn_ui.rs  systems.rs
src/user_select/: components.rs  mod.rs
src/user_selection/: components.rs  mod.rs  systems.rs
src/work_queue/: components.rs  mod.rs  systems.rs
src/workable/: components.rs  mod.rs  systems.rs
tests/: bed.rs  elapsed_time.rs  farm.rs  farm_tile.rs  integration_tests.rs  intergration_tests.rs  pawn.rs  story_time.rs  utils.rs
tests/apply_default_global_config/: mod.rs
tests/bed/: mod.rs
tests/pawn/: mod.rs
(+34 files in other folders)
