[package]
name = "zxc"
version = "0.1.0"
edition = "2021"

[features]
default = ["bevy_egui", "debug_ui"]
bevy_egui = ["dep:bevy_egui"]
debug_ui = []

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking"] }
bevy_egui = { version = "0.33", optional = true }
bevy_pancam = { version = "0.17", features = ["bevy_egui"] }
bevy_framepace = "0.18.1"
pathfinding = "4.9.1"
bevy_asset_loader = "0.22.0"
bevy-inspector-egui = "0.29.1"
# bevy_magic_light_2d = { git = "https://github.com/zaycev/bevy-magic-light-2d.git", branch = "main" }
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"
ron = "0.8.1"
serde = "1.0.204"
lazy_static = "1.4.0"
once_cell = "1.19.0"

[dev-dependencies]
ctor = "0.3.6"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
